Source/WebInspectorUI/UserInterface/Models/ResourceTimingData.js
@@ -94,7 +94,7 @@ WI.ResourceTimingData = class ResourceTimingData
     get connectEnd() { return this._connectEnd; }
     get secureConnectionStart() { return this._secureConnectionStart; }
     get requestStart() { return this._requestStart || this._startTime || this._resource.requestSentTimestamp; }
-    get responseStart() { return this._responseStart || this._startTime || this._resource.responseReceivedTimestamp; }
+    get responseStart() { return this._responseStart || this._startTime || this._resource.responseReceivedTimestamp || this._resource.finishedOrFailedTimestamp; }
     get responseEnd() { return this._responseEnd || this._resource.finishedOrFailedTimestamp; }
 
     markResponseEndTime(responseEnd)
